crates/dust-ast/src/tests/snapshots/dust_ast__tests__arithmetic__assert_10_over_7.snap
---
source: crates/dust-ast/src/tests/arithmetic.rs
expression: parsed
---
{
  "Literal": {
    "lit": {
      "Number": 1.4285714285714286
    },
    "span": {
      "offset": 1,
      "length": 15
    }
  }
}
