crates/dust-ast/src/tests/snapshots/dust_ast__tests__arithmetic__assert_15_over_7.snap
---
source: crates/dust-ast/src/tests/arithmetic.rs
expression: parsed
---
{
  "Literal": {
    "lit": {
      "Number": 2.142857142857143
    },
    "span": {
      "offset": 0,
      "length": 9
    }
  }
}
