crates/dust-ast/src/tests/snapshots/dust_ast__tests__arithmetic__assert_1_sub_6.snap
---
source: crates/dust-ast/src/tests/arithmetic.rs
expression: parsed
---
{
  "Literal": {
    "lit": {
      "Number": -5.0
    },
    "span": {
      "offset": 0,
      "length": 9
    }
  }
}
