crates/dust-ast/src/tests/snapshots/dust_ast__tests__arithmetic__assert_2_eq_2_and_true.snap
---
source: crates/dust-ast/src/tests/arithmetic.rs
expression: parsed
---
{
  "Literal": {
    "lit": {
      "Bool": true
    },
    "span": {
      "offset": 1,
      "length": 15
    }
  }
}
