crates/dust-ast/src/tests/snapshots/dust_ast__tests__arithmetic__assert_2_eq_true_and_five_lt_three.snap
---
source: crates/dust-ast/src/tests/arithmetic.rs
expression: parsed
---
{
  "Literal": {
    "lit": {
      "Bool": false
    },
    "span": {
      "offset": 1,
      "length": 15
    }
  }
}
