crates/dust-ast/src/tests/snapshots/dust_ast__tests__arithmetic__assert_half_eq_half.snap
---
source: crates/dust-ast/src/tests/arithmetic.rs
expression: parsed
---
{
  "Literal": {
    "lit": {
      "Bool": true
    },
    "span": {
      "offset": 1,
      "length": 16
    }
  }
}
